# rust-wasm-example

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  webpack.config.js
src/: index.ts  style.css
wasm/: Cargo.toml  README.md
wasm/pkg/: package.json  rust_wasm_module.d.ts  rust_wasm_module.js  rust_wasm_module_bg.d.ts  rust_wasm_module_bg.wasm
wasm/src/: lib.rs
