[package]
name = "rust_wasm_module"
version = "0.1.0"
authors = ["Sergey Samsonov <osenvosem@gmail.com>"]
edition = "2018"
description = "SHA512 generator"
license = "MIT"
repository = "https://github.com/osenvosem/rust_wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sha3 = "0.8.2"
hex = "0.4.2"
